2011-09-19  Andreas Kupries  <andreask@activestate.com>

	* generic/cpubind.c: Reworked the option processing. More general,
	  accepting any order of options, repetition, etc. And flattened,
	  with each type-flag becoming its own option.
	* generic/topology.c: Tweaks to cpubind/membind argument error
	  messages.

	* tests/topology_cpubind.test: Started on proper testsuite,
	  argument checks only for the moment.

	* tests/topology.test: Noted the subordinate files which are done.

	* generic/misc.c: Suppress some warnings.

2011-09-16  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Small fixes, plus start on the cpubind
	  ensemble.

	* generic/misc.h: New files.
	* generic/misc.c: Added to configure.
	* configure.in:
	* configure: Regenerated.

	* tests/topology_cpu_node_set.test: Moved the testing of the
	* tests/topology.test: per-element node/cpuset methods here.
	
	* doc/instance.inc: Documented new per-element nodeset method,
	* generic/bitmap.h: and the changes to cpuset method: bitmap result,
	* generic/object.c: and new argument to specify which of the
	* generic/bitmap.c: different sets associated with an element to
	* generic/topology.c: return (analogous to the per-topology sets).

	* generic/topology.c: Better argument check and error for the
	  topology global 'cpuset' and 'nodeset' methods.

	* generic/cpubind.c: Re-indented.

	* tests/topology_convert.test: Added tests for the NUMA case.

	* tests/topology_cpu_node_set.test: Converted to proper testsuite.

2011-09-15  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Started on the cpu binding documentation.
	* generic/cpubind.c: Reworked the cpubind implementation, using
	  the bitmap functions to simplify internals, plus extended error
	  reporting and coalescing the get/last code branches.

	* doc/concepts.inc: Replaced the short draft notes with proper
	  text. The parts of a topology are now called 'elements' instead